key2 밖에서 흔들어서 입력 모드 바꾸기 bs 흔들어 지우기까지